# data-platform

./: .gitignore  README.md  demo_pipeline.py  pyproject.toml  requirements.txt  setup.py
foundation/: README.md  docker-compose.yml
foundation/shared/: __init__.py
foundation/shared/config/: __init__.py  settings.py
foundation/shared/database/: __init__.py  init_db.py  postgres_connection.py
foundation/shared/messaging/: __init__.py  batch_processor.py  redpanda_consumer.py  redpanda_producer.py
foundation/shared/models/: __init__.py  inventory.py  order.py  page_view.py
foundation/shared/storage/: gcs_client.py
projects/ecommerce-dbt/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  SETUP_COMPLETE.md  config.py
projects/ecommerce-dbt/data_generator/: __init__.py  config.py  event_generator.py  main.py  product_generator.py  user_generator.py
projects/ecommerce-dbt/dbt/: README.md  dbt_project.yml  profiles.yml
projects/hybrid-cloud-bridge/: .gitignore  Dockerfile  docker-compose.yml  env.example  extract_key.py  producer_mock.py  start.md  ts.txt
scripts/: analyze_data_volume.py  check_services.py  consume_events.py  init_database.py  run_checks.bat  test_data_generator.py  test_db_connection.py  test_redpanda.py  test_redpanda_connection.py  verify_demo_ready.py  verify_setup.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_ingestion.py
warehouse/: count_rows.py  dbt_project.yml  deploy_phase2.py  show_diff.py  verify_connection.py
warehouse/macros/: create_schema.sql
warehouse/models/: sources.yml
(+36 files in other folders)
